fix: vertical alignment of MP knot

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -2155,7 +2155,7 @@ footer {
     max-width: 780px;
   }
   .serviceIcon {
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.0rem;
   }
   .serviceTitle {
     font-size: 2.111rem;
